Correct spacing, spelling, punctuation and other housekeeping issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,3 @@
-/* * {
-  border: solid 1px #000000;
-} */
-
 body {
   background-color: #ffffff;
 }
